Changed to new points, and added comments to reload.js

--- a/JETONPOINTS.html
+++ b/JETONPOINTS.html
@@ -54,7 +54,7 @@ var A5 = new Object({
 			building: "LE"
 		});	
 		
-//between Leeds House and St. PatrickÂ¡Â¯s Building
+//between Leeds House and St. Patrick¡¯s Building
 var A5a = new Object({
 			lat: 45.387738,
 			lng: -75.698619,
@@ -62,7 +62,7 @@ var A5a = new Object({
 			building: "null"
 });	
 
-//between Leeds House and St. PatrickÂ¡Â¯s Building
+//between Leeds House and St. Patrick¡¯s Building
 var A5b = new Object({
 			lat: 45.387594,
 			lng: -75.698743,
