--- a/FindClosestPoint.html
+++ b/FindClosestPoint.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>FindClosestPt</title>
+    <style>
+      html, body, #map-canvas {
+        height: 100%;
+        margin: 0px;
+        padding: 0px
+      }
     </style>
-    <script type="text/javascript"
-       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKN2SV1Sg3rTxson6oxNS0oXx5nv3feU0&sensor=false">
-    </script>
-    <script type="text/javascript">
-
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script>
 var C1=new Object({
 		lat:45.385061,
 		lng: -75.695092,
@@ -208,7 +209,6 @@ var C18=new Object({
 	building:"null"
 });
 
-
 C1.surr=new Array(C1a,C2,C3,C5,C6,C13);
 C1a.surr=new Array(C1,C2,C5);
 C2.surr=new Array(C1,C1a,C4);
@@ -236,120 +236,80 @@ C16.surr=new Array(C15,C16a,C4);
 C16a.surr=new Array(C16);
 C17.surr=new Array(C14,C15,C18);
 C18.surr=new Array(C17);
+var myArr = new Array(C6,C5,C4a,C4,C3,C2,C1,C1a);
 
-function closest_pt_mark(desti,loca){
-
-		var length=loca.surr.length;
-		var dist=100000;
-		var count=0;
-		var closest=desti;
-		// intialize dist to high arbitrary number
-		//for loop to make marker only for closest point to destination
-		for(var w=0; w<length;w++){
-			var getX=(loca.surr[w].lat);
-			var getY=(loca.surr[w].lng);
-			var destX=(desti.lat);
-			var destY=(desti.lng);
-			//code segment to find dist between destination and point
-			//var lats=Math.pow(destX-getX,2);
-			var lats= destX-getX;
-			lats= lats*lats;
-			//var lngs=Math.pow(destY-getY,2);
-			var lngs= destY-getY;
-			lngs= lngs*lngs;
-			var pt_distance=Math.sqrt(lats+lngs);
-		
-			if(pt_distance<dist){
-			
-				dist=pt_distance;//update the distance
-				closest=loca.surr[w];		
+function initialize() {
+	//Change this points attributes to test for closest point.
+	var mypt=new Object({	
+		lat: 45.382352,
+		lng: -75.69514,			
+	});
+  //var x is the object for closest point of OUR objects, and the location.
+  var x = find_pt_to_currPos(mypt,myArr); 
+  //see what the function outputs by alert.
+  alert(x.lat);
+  alert(x.lng);
+  }
+  
+  
+ function find_pt_to_currPos(loc, mainArr){		//takes in curr location, and the main array of all points
+	var closestPt = mainArr[0];					//set it to first element if none others are found
+	var b = 10000;								
+	var shortDist;
+	for(var i=0;i<mainArr.length;i++){					//till end of array
+		shortDist = closest_pt_mark(loc, mainArr[i]);		//shortDist is the distance calculated
+		if(shortDist<b){			//if its less than b 
+			b=shortDist;				//update b to shortest, so next loop it will compare to shortest
+			closestPt=mainArr[i];		//update our point, so it finds the closest
 			}
+		}
+	return closestPt;			//return the closest point of our object from the current location
+	}
+
+function closest_pt_mark(desti , loca)
+	{
+		var length = loca.surr.length;	
+		var dist = 100000;		// initialise dist to high arbitrary number
+		var closest = desti; 	// set closest point to the destination
+		
+		//for loop to make marker only for closest point to destination
+		
+		for(var w = 0; w < length ; w++)
+		{
+			var getX = (loca.surr[w].lat);
+			var getY = (loca.surr[w].lng);
+			var destX = (desti.lat);
+			var destY = (desti.lng);
 			
+			//code segment to find dist between destination and point
+			
+			// latitudes
+			var lats = destX - getX;
+			lats = lats * lats;
+			
+			// longitudes
+			var lngs = destY - getY;
+			lngs = lngs * lngs;
+			
+			// distance from point
+			var pt_distance = Math.sqrt(lats + lngs);
+			
+			// if the pt_distance is less than dist then update dist and closest point
+			if(pt_distance < dist)
+			{
+				dist = pt_distance;		//update the distance
+				//closest = loca.surr[w]; // reset the closest point
+			}	
 		}
-	
-		return closest;	
-}
-
-    function initialize() {
-		var mapOptions = {
-          center: new google.maps.LatLng( 45.388081, -75.69602),
-          zoom: 15
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);	
-		// 	You can enter any points here and it should draw the polyline.
-		var dest=C14;	// destination
-		var loc=C1;		// location
-		
-		var myLatlng = new google.maps.LatLng(loc.lat,loc.lng);
-		var destLatlng= new google.maps.LatLng(dest.lat,dest.lng);
-		
-		//Making a marker for the current location
-		var marker = new google.maps.Marker({
-		position: myLatlng,
-		title:"location"
-		});
-		
-		//NOT NECESSARY AS WE ARE BEING PASSED THE DESTINATION MARKER 
-		//sets up marker to destination
-		var destmarker = new google.maps.Marker({
-		position: destLatlng,
-		map: map,
-		title:"destination"
-		});
-		
-		
-		// To add the marker to the map, call setMap();
-		marker.setMap(map);	
-
-		google.maps.event.addListener(marker, 'click', function() {
-		infowindow.open(map,marker);
-		});
-		google.maps.event.addListener(destmarker, 'click', function() {
-		infowindow.open(map,destmarker);
-		});
-		
-		var pathArray=new Array();
-		pathArray.push(new google.maps.LatLng(loc.lat,loc.lng))
-		//var path_f=getpath(loc,dest,dest.building);		
-		while(loc.name!=dest.name){
-		var closest_pt=closest_pt_mark(dest,loc);
-		var markcoord=new google.maps.LatLng(closest_pt.lat,closest_pt.lng);
-		pathArray.push(markcoord);
-		var marker2 = new google.maps.Marker({
-					position: markcoord,
-					map: map,
-					title:closest_pt.name
-					});
-		marker2.setMap(map);
-		
-		loc=closest_pt;
-		
-		}
-		
-		var flightPath = new google.maps.Polyline({
-		path: pathArray,
-		geodesic: true,
-		strokeColor: '#FF0000',
-		strokeOpacity: 1.0,
-		strokeWeight: 2
-		});
-		
-		flightPath.setMap(map);
-		}
-		
-	/*
-	* A function to find the closest point
-	*@param  desti - The destination point
-	*@param  loca - The starting point
-	*/
-	
-		
+		return dist;	//CHANGED THIS TO return dist, because distance is needed to calculate closest point in the other function
+	}	
 	  
-      google.maps.event.addDomListener(window, 'load', initialize);
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
     </script>
   </head>
   <body>
-    <div id="map-canvas"/>
+    <div id="map-canvas"></div>
   </body>
 </html>
